@@ -42,6 +42,7 @@ examples/fixture_create_and_print_mediainfo_statement_commons_depicts_human.pl
 examples/fixture_create_and_print_property_wd_instance_of.pl
 examples/fixture_create_and_print_reference_wd_url.pl
 examples/fixture_create_and_print_reference_wd_viaf.pl
+examples/fixture_create_and_print_sense_wd_dog.pl
 examples/fixture_create_and_print_snak_wd_givenname_douglas.pl
 examples/fixture_create_and_print_snak_wd_gramatical_gender_masculine.pl
 examples/fixture_create_and_print_snak_wd_image_dog.pl
